feat: Add interactive form for user input
This commit adds an interactive form to the notebook, allowing users to enter values for parameters such as `--azure-openai-endpoint`, `--azure-openai-deployment-name`, and `--azure-openai-apikey`. The form includes input fields and a submit button for user convenience.

The changes include:
- Added HTML code for the interactive form
- Updated cell execution counts to reflect changes in the notebook
- Removed unnecessary code related to model parameters

These additions enhance the user experience by providing a more intuitive way to input values and interact with the notebook.

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -102,6 +102,15 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div><form id=\"253bede7d3564ffe96a648f335ff48a1\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;253bede7d3564ffe96a648f335ff48a1&#39;));\">Ok</button></form></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "Kernel added: #!orchestrator-kernel"
       ]
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -137,8 +146,6 @@
     "  - Seth Juarez\n",
     "model:\n",
     "  api: chat\n",
-    "  parameters:\n",
-    "    max_tokens: 3000\n",
     "sample:\n",
     "  firstName: Gino\n",
     "  context: >\n",
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -187,13 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey there! 🌙 It sounds like you're curious about the latest happenings or trends within nightlife. Here’s a quick rundown:\n",
-       "\n",
-       "1. **Live Music**: Many venues are focusing on local artists and unique genres to create an intimate experience.\n",
-       "2. **Themed Events**: Theme nights are all the rage, adding a fun twist to your typical outings!\n",
-       "3. **Interactive Experiences**: Bars and clubs are introducing activities like karaoke, trivia nights, and immersive art displays.\n",
-       "\n",
-       "Is there anything specific about nightlife or a certain location you're interested in? Let me know! 🎉"
+       "Hey there! 😊 The context here is that I'm here to assist you with finding information and answering your questions in a friendly and concise way. If you have anything specific you'd like to know, just let me know! I'm all ears! 🌟"
       ]
      },
      "metadata": {},
@@ -201,8 +202,19 @@
     }
    ],
    "source": [
-    "what is new? but about the people in the nite"
+    "what is the context here?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
