feat: Add Microsoft.DotNet.Interactive.CSharp package
This commit adds the Microsoft.DotNet.Interactive.CSharp package to the project, bringing new capabilities for C# interactive programming. The PromptyOrchestratorKernel.cs file is also updated to include the necessary using statement for Microsoft.DotNet.Interactive.CSharp.

The sample.ipynb notebook is modified to include a new tool named "doshit" with an input parameter of type string. This change enhances the functionality and flexibility of the notebook.

These changes will enable users to leverage C# interactive features and utilize the new "doshit" tool within the sample.ipynb notebook.

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -173,7 +173,10 @@
     "user:\n",
     "{{input}}\n",
     " \n",
-    " "
+    " tool:\n",
+    "  -name: doshit\n",
+    "   -parameters\n",
+    "    -input: string\n"
    ]
   },
   {
@@ -204,17 +207,6 @@
    "source": [
     "what is the context here?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
