parse samples from prompty

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"253bede7d3564ffe96a648f335ff48a1\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;253bede7d3564ffe96a648f335ff48a1&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"ba55cbd6f12947c296dd278a103d2341\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;ba55cbd6f12947c296dd278a103d2341&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -207,17 +207,12 @@
     "{{context}}\n",
     " \n",
     "user:\n",
-    "{{input}}\n",
-    " \n",
-    " tool:\n",
-    "  -name: doshit\n",
-    "   -parameters\n",
-    "    -input: string\n"
+    "{{input}}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -233,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey there! 😊 The context here is that I'm here to assist you with finding information and answering your questions in a friendly and concise way. If you have anything specific you'd like to know, just let me know! I'm all ears! 🌟"
+       "Hey Doshit! I'm here to assist you with any questions or information you need. Just shoot your queries, and I'll do my best to help out! 🏕️"
       ]
      },
      "metadata": {},
@@ -241,7 +236,7 @@
     }
    ],
    "source": [
-    "what is the context here?"
+    "who are you helping with. What's my name"
    ]
   }
  ],
@@ -261,6 +256,16 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "prompty",
+      "name": "orchestrator-kernel"
+     },
+     {
+      "aliases": [],
+      "languageName": "prompty",
+      "name": "prompty"
      }
     ]
    }
