feat: Add support for storing and retrieving values in PromptyKernel
This commit adds the capability to store and retrieve values in the PromptyKernel. It introduces a new dictionary `_values` to store key-value pairs, which can be accessed by name. The `SubmitCode` command now parses the submitted code using `PromptyParser`, and if there are any sample values present, they are added to the `_values` dictionary. The `RequestValue` command retrieves the value from `_values` based on the provided name, and publishes it as a `ValueProduced` event. The `RequestValueInfos` command returns all available value names along with their corresponding formatted values.

These changes allow users to store and access values within the PromptyKernel, enabling more dynamic interactions with the kernel.

Co-authored-by: [Author Name] <author@example.com>

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"0c716c8ad556481da743391fb444e713\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;0c716c8ad556481da743391fb444e713&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"9a3d89a4de1d4c7f9c6b0779ad6f9105\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://dicolomb-ai-eastus.openai.azure.com\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-4o-mini\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"5e2e6a3eae4b49d0965785b6dc9bc668\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;9a3d89a4de1d4c7f9c6b0779ad6f9105&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -177,7 +177,7 @@
     "{{context}}\n",
     " \n",
     "user:\n",
-    "{{input}}\n"
+    "{{input}}"
    ]
   },
   {
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey there, Gino! 🏕️ How can I assist you today?"
+       "Hey there! I don't know your name yet, but I'm here to help you with anything you need. Just let me know, and I'll gladly assist you! 😊"
       ]
      },
      "metadata": {},
