--- a/sample.ipynb
+++ b/sample.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"fc7446301c41462886aa82aab4c0fb74\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://dicolomb-ai-eastus.openai.azure.com\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-4o-mini\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"5e2e6a3eae4b49d0965785b6dc9bc668\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;fc7446301c41462886aa82aab4c0fb74&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"1a28754fc26441ae8381bdfcd60dff34\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;1a28754fc26441ae8381bdfcd60dff34&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -153,7 +153,7 @@
     "model:\n",
     "  api: chat\n",
     "sample:\n",
-    "  firstName: Gino\n",
+    "  firstName: Geno\n",
     "  context: >\n",
     "    The Alpine Explorer Tent boasts a detachable divider for privacy,\n",
     "    numerous mesh windows and adjustable vents for ventilation, and\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey Gino! 😊 I'm here to help you with any questions you might have. What can I do for you today?"
+       "Hey \"shit\" 👋! Your name is \"shit.\" How can I assist you today?"
       ]
      },
      "metadata": {},
@@ -206,8 +206,19 @@
     }
    ],
    "source": [
-    "who are you helping with. What's my name"
+    "Hi, what's my name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
