--- a/sample.ipynb
+++ b/sample.ipynb
@@ -4,6 +4,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.SemanticKernel, 1.22.0</span></li><li><span>Microsoft.SemanticKernel.Abstractions, 1.22.0</span></li><li><span>Microsoft.SemanticKernel.Prompty, 1.22.0-alpha</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#r \"nuget: Microsoft.SemanticKernel, 1.22.0\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel.Prompty, 1.22.0-alpha\"\n",
+    "#r \"nuget: Microsoft.SemanticKernel.Abstractions, 1.22.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
@@ -21,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -41,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -64,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -93,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -109,7 +134,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"1a28754fc26441ae8381bdfcd60dff34\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;1a28754fc26441ae8381bdfcd60dff34&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"89cdf93c990c4972beca4180ca3f0f8d\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;89cdf93c990c4972beca4180ca3f0f8d&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -131,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -185,6 +210,36 @@
    "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using Microsoft.SemanticKernel;\n",
+    "using Microsoft.SemanticKernel.ChatCompletion;\n",
+    "using System.ComponentModel;\n",
+    "        \n",
+    "[KernelFunction]\n",
+    "[Description(\"Get the weather for a city and state\")]\n",
+    "public static Task<string> GetWeather(\n",
+    "    [Description(\"The city to get the weather for\")] string city,\n",
+    "    [Description(\"The state to get the weather for\")] string state)\n",
+    "{\n",
+    "    return Task.FromResult($\"The weather in {city}, {state} is 100 degrees\");\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "dotnet_interactive": {
      "language": "orchestrator-kernel"
     },
     "polyglot_notebook": {
@@ -198,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey \"shit\" 👋! Your name is \"shit.\" How can I assist you today?"
+       "Hey Geno! The current temperature in New York, NY is 100 degrees. Stay cool! 🌞🗽"
       ]
      },
      "metadata": {},
@@ -206,19 +261,37 @@
     }
    ],
    "source": [
-    "Hi, what's my name"
+    "Hi, what's the weather in newyork"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "orchestrator-kernel"
+    },
+    "polyglot_notebook": {
+     "kernelName": "orchestrator-kernel"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hey Geno! 🏕️ I'm here to help you with any questions you have about the Alpine Explorer Tent. What can I assist you with today?"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Who are you helping with"
+   ]
   }
  ],
  "metadata": {
