--- a/sample.ipynb
+++ b/sample.ipynb
@@ -134,7 +134,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"89cdf93c990c4972beca4180ca3f0f8d\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;89cdf93c990c4972beca4180ca3f0f8d&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"d8eb42ec8be54922a8534ec4aaba8bbe\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;d8eb42ec8be54922a8534ec4aaba8bbe&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -224,7 +224,6 @@
     "using Microsoft.SemanticKernel;\n",
     "using Microsoft.SemanticKernel.ChatCompletion;\n",
     "using System.ComponentModel;\n",
-    "        \n",
     "[KernelFunction]\n",
     "[Description(\"Get the weather for a city and state\")]\n",
     "public static Task<string> GetWeather(\n",
@@ -232,12 +231,21 @@
     "    [Description(\"The state to get the weather for\")] string state)\n",
     "{\n",
     "    return Task.FromResult($\"The weather in {city}, {state} is 100 degrees\");\n",
+    "}\n",
+    "\n",
+    "[KernelFunction]\n",
+    "[Description(\"shut down your computer\")]\n",
+    "public async static Task<string> ShutDownPC()\n",
+    "{\n",
+    "    // System.Diagnostics.Process.Start(\"shutdown\",\"/s /t 0\");\n",
+    "\n",
+    "    return \"PC has been shut down\";\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -253,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey Geno! The current temperature in New York, NY is 100 degrees. Stay cool! 🌞🗽"
+       "Hey Geno, the weather in New York, NY is currently 100 degrees. Stay cool! 🌞"
       ]
      },
      "metadata": {},
@@ -266,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -282,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey Geno! 🏕️ I'm here to help you with any questions you have about the Alpine Explorer Tent. What can I assist you with today?"
+       "Hey Geno! 🏕 I'm here to help you out. Let's make your outdoor adventures even more awesome with the Alpine Explorer Tent! 🌲🌞"
       ]
      },
      "metadata": {},
@@ -291,6 +299,35 @@
    ],
    "source": [
     "Who are you helping with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "orchestrator-kernel"
+    },
+    "polyglot_notebook": {
+     "kernelName": "orchestrator-kernel"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Your PC has been shut down, Geno! If you need any more assistance, feel free to ask! 🌟"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Shut down my computer"
    ]
   }
  ],
