--- a/sample.ipynb
+++ b/sample.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -12,7 +18,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.SemanticKernel, 1.22.0</span></li><li><span>Microsoft.SemanticKernel.Abstractions, 1.22.0</span></li><li><span>Microsoft.SemanticKernel.Prompty, 1.22.0-alpha</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AutoGen, 0.2.1</span></li><li><span>AutoGen.DotnetInteractive, 0.2.1</span></li><li><span>Microsoft.SemanticKernel, 1.22.0</span></li><li><span>Microsoft.SemanticKernel.Abstractions, 1.22.0</span></li><li><span>Microsoft.SemanticKernel.Prompty, 1.22.0-alpha</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -22,7 +28,10 @@
    "source": [
     "#r \"nuget: Microsoft.SemanticKernel, 1.22.0\"\n",
     "#r \"nuget: Microsoft.SemanticKernel.Prompty, 1.22.0-alpha\"\n",
-    "#r \"nuget: Microsoft.SemanticKernel.Abstractions, 1.22.0\""
+    "#r \"nuget: Microsoft.SemanticKernel.Abstractions, 1.22.0\"\n",
+    "\n",
+    "#r \"nuget:AutoGen,0.2.1\"\n",
+    "#r \"nuget:AutoGen.DotnetInteractive,0.2.1\""
    ]
   },
   {
@@ -82,9 +91,14 @@
    "source": [
     "using Microsoft.DotNet.Interactive;\n",
     "using Interactive.Prompty;\n",
+    "using AutoGen.Core;\n",
+    "using AutoGen.OpenAI;\n",
+    "using AutoGen.OpenAI.Extension;\n",
+    "using AutoGen.DotnetInteractive;\n",
+    "using AutoGen.DotnetInteractive.Extension;\n",
     "\n",
     "\n",
-    "await PromptyExtension.LoadExtensionAsync((CompositeKernel)Kernel.Root);"
+    "await PromptyExtension.LoadExtensionAsync((CompositeKernel)Microsoft.DotNet.Interactive.Kernel.Root);"
    ]
   },
   {
@@ -134,7 +148,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"d8eb42ec8be54922a8534ec4aaba8bbe\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;d8eb42ec8be54922a8534ec4aaba8bbe&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"f85becc64c4540f088886d9ada2dd1f1\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-35-turbo\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;f85becc64c4540f088886d9ada2dd1f1&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -189,9 +203,9 @@
     "---\n",
     " \n",
     "system:\n",
-    "You are an AI assistant who helps people find information. As the assistant,\n",
+    "You are an AI assistant who helps people with_anything. As the assistant,\n",
     "you answer questions briefly, succinctly, and in a personable manner using\n",
-    "markdown and even add some personal flair with appropriate emojis.\n",
+    "markdown and even add some personal flair with appropriate emojis. You try to resolve customer's question in one-step\n",
     " \n",
     "# Customer\n",
     "You are helping {{firstName}} to find answers to their questions.\n",
@@ -207,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -224,6 +238,9 @@
     "using Microsoft.SemanticKernel;\n",
     "using Microsoft.SemanticKernel.ChatCompletion;\n",
     "using System.ComponentModel;\n",
+    "using Microsoft.DotNet.Interactive.Events;\n",
+    "using Microsoft.DotNet.Interactive.Commands;\n",
+    "\n",
     "[KernelFunction]\n",
     "[Description(\"Get the weather for a city and state\")]\n",
     "public static Task<string> GetWeather(\n",
@@ -240,12 +257,26 @@
     "    // System.Diagnostics.Process.Start(\"shutdown\",\"/s /t 0\");\n",
     "\n",
     "    return \"PC has been shut down\";\n",
+    "}\n",
+    "\n",
+    "[KernelFunction]\n",
+    "[Description(\"Run Powershell\")]\n",
+    "public async static Task<string> Powershell([Description(\"the powershell script to run\")] string pwsh)\n",
+    "{\n",
+    "    var events = new List<KernelEvent>();\n",
+    "    var subscriptions = Microsoft.DotNet.Interactive.Kernel.Current.RootKernel.KernelEvents.Subscribe(e => events.Add(e));\n",
+    "    var result = await Microsoft.DotNet.Interactive.Kernel.Root.RunSubmitCodeCommandAsync(pwsh, \"pwsh\");\n",
+    "    subscriptions.Dispose();\n",
+    "    var displayValues = events.Where(x => x is StandardErrorValueProduced || x is StandardOutputValueProduced || x is ReturnValueProduced || x is DisplayedValueProduced)\n",
+    "                        .SelectMany(x => (x as DisplayEvent)!.FormattedValues);\n",
+    "\n",
+    "    return string.Join(\"\\n\", displayValues.Select(x => x.Value)) ?? \"Nothing to display\";\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -261,7 +292,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey Geno, the weather in New York, NY is currently 100 degrees. Stay cool! 🌞"
+       "Hey Geno! 🌞 The weather in New York, NY is scorching at 100°F. 😅 Make sure to stay hydrated and maybe find some shade! If you’re planning an outdoor adventure with your Alpine Explorer Tent, you can rely on its excellent ventilation features to stay cool. 🏕️"
       ]
      },
      "metadata": {},
@@ -274,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -290,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "Hey Geno! 🏕 I'm here to help you out. Let's make your outdoor adventures even more awesome with the Alpine Explorer Tent! 🌲🌞"
+       "Hey Geno! 😊 I'm here to help you with anything you need. Whether it's about the Alpine Explorer Tent or something else, just let me know! 🌲🏕️"
       ]
      },
      "metadata": {},
@@ -303,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -318,16 +349,29 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Your PC has been shut down, Geno! If you need any more assistance, feel free to ask! 🌟"
-      ]
+      "text/plain": []
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31;1mGet-ChildItem: \u001b[31;1mCannot convert 'System.Object[]' to the type 'System.String' required by parameter 'Filter'. Specified method is not supported.\u001b[0m\r\n"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "Cannot convert 'System.Object[]' to the type 'System.String' required by parameter 'Filter'. Specified method is not supported.",
+     "output_type": "error",
+     "traceback": [
+      "Cannot convert 'System.Object[]' to the type 'System.String' required by parameter 'Filter'. Specified method is not supported."
+     ]
     }
    ],
    "source": [
-    "Shut down my computer"
+    "load all images under C:\\Users\\xiaoyuz\\Pictures\\Screenshots"
    ]
   }
  ],
