Update Microsoft.DotNet.Interactive.PackageManagement version
- Updated the version of Microsoft.DotNet.Interactive.PackageManagement to 1.0.0-beta.24514.1 in Interactive.Prompty.Tests.csproj and Interactive.Prompty.csproj.
- This update brings new features and capabilities to the package management functionality.
- The updated version will enhance the overall performance and stability of the codebase.

fix: Fix variable name in PromptyKernel.cs

- Renamed the variable "prompty" to "promptyMetadata" in PromptyKernel.cs.
- This change improves code readability and clarity.

docs: Update sample notebooks metadata

- Updated the metadata of sample copy.ipynb and sample.ipynb files.
- Added dotnet_interactive language information for C# cells.
- Updated polyglot_notebook kernelName to "csharp".
- These changes ensure proper rendering and execution of C# code cells in the notebooks.

docs: Add instructions for loading images using Python

- Added instructions on how to load images from a specified directory using Python.
- Provided example code that utilizes Pillow library (Python Imaging Library).
- This addition helps users work with image files effectively within their Python projects.

feat: Display current folder contents in notebook

- Added a cell that displays the names of files present in the current folder.
- The displayed table includes file names as rows, providing an overview of available files.

--- a/sample copy.ipynb
+++ b/sample copy.ipynb
@@ -109,6 +109,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -562,6 +568,12 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -607,6 +619,12 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -627,6 +645,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -657,6 +681,12 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
